// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ProfilePage If there are active composer tokens 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c15 {
  margin-top: 24px;
  background-color: #fff;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c16 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c17 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div>
    <div
      className="c0"
    >
      <div
        className="c15"
      >
        <button
          aria-expanded={false}
          className="c16"
          onClick={[Function]}
        >
          <span
            className="c17"
          >
            Developer Tokens
          </span>
          <svg
            aria-hidden="true"
            fill="#555"
            focusable="false"
            height={40}
            role="img"
            viewBox="0 0 24 24"
            width={40}
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c15"
    >
      <button
        aria-expanded={false}
        className="c16"
        onClick={[Function]}
      >
        <span
          className="c17"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage If there are deleted composer tokens 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c15 {
  margin-top: 24px;
  background-color: #fff;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c16 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c17 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c15"
    >
      <button
        aria-expanded={false}
        className="c16"
        onClick={[Function]}
      >
        <span
          className="c17"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage failure during password reset 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c17 {
  margin-top: 24px;
  background-color: #fff;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c18 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c19 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c16 {
  padding: 0.5em 0 0 0;
  margin: 0;
  display: block;
}

.c15 {
  margin-top: 0.5em;
  padding: 0.5em;
  background-color: #ffeb3b;
  color: #000;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c18 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c18 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c18 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
          <p
            className="c15 c16"
            role="alert"
          />
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c17"
    >
      <button
        aria-expanded={false}
        className="c18"
        onClick={[Function]}
      >
        <span
          className="c19"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage failure during profile save 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c16 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c16:hover,
.c16:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c16:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c15 {
  text-shadow: 0px 0px 2px #000;
}

.c19 {
  margin-top: 24px;
  background-color: #fff;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c20 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c21 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  padding: 1em;
  background-color: #ffeb3b;
  margin: 0.5em 0 0 0;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  background-color: #f9bdbd;
}

.c12 {
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: 2em;
  background-image: url( exclamation-circle.svg );
  height: 2em;
  min-width: 2em;
  margin: 0 1em;
}

.c13 {
  color: #5d237a;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c14 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c18 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c17 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c20 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c20 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c20 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800 ) {
  .c11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    text-align: left;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div
              className="c10 c11"
              role="alert"
            >
              <span
                alt="Error sign"
                className="c12"
              />
              <span>
                Oops, something went wrong on our end, please try again. If this keeps happening, 
                <a
                  className="c13"
                  href="mailto:support@yoast.com"
                >
                  <span>
                    please contact support
                  </span>
                </a>
                .
              </span>
            </div>
            <div>
              <button
                className="c14 c15 c16"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c17"
        >
          <p
            className="c18"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c15 c16"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c18"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c19"
    >
      <button
        aria-expanded={false}
        className="c20"
        onClick={[Function]}
      >
        <span
          className="c21"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage has sent password reset 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c16 {
  margin-top: 24px;
  background-color: #fff;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c17 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c18 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c15 {
  padding: 0.5em 0 0 0;
  margin: 0;
  display: block;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
          <p
            className="c15"
          >
            An email has been sent, please check your inbox.
          </p>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c16"
    >
      <button
        aria-expanded={false}
        className="c17"
        onClick={[Function]}
      >
        <span
          className="c18"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage saving profile 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c16 {
  margin-top: 24px;
  background-color: #fff;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c17 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c18 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c13 {
  padding: 0.5em 0 0 1em;
  margin: 0;
  display: inline-block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c15 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c14 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:400px ) {
  .c13 {
    padding: 0.5em 0 0 0;
    display: block;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
              <p
                className="c13"
              >
                Saving...
              </p>
            </div>
          </div>
        </form>
        <section
          className="c14"
        >
          <p
            className="c15"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c15"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c16"
    >
      <button
        aria-expanded={false}
        className="c17"
        onClick={[Function]}
      >
        <span
          className="c18"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage sending password reset 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c16 {
  margin-top: 24px;
  background-color: #fff;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c17 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c18 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c15 {
  padding: 0.5em 0 0 1em;
  margin: 0;
  display: inline-block;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
          <p
            className="c15"
          >
            Sending email...
          </p>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c16"
    >
      <button
        aria-expanded={false}
        className="c17"
        onClick={[Function]}
      >
        <span
          className="c18"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage the default case 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c15 {
  -webkit-flex: 0 0 120px;
  -ms-flex: 0 0 120px;
  flex: 0 0 120px;
  height: 120px;
  border-radius: 50%;
  margin-right: 12px;
}

.c16 {
  margin-top: 24px;
  background-color: #fff;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c17 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c18 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="test@test.test"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        <img
          alt=""
          className="c15"
          size="120px"
          src="dummy.png"
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c16"
    >
      <button
        aria-expanded={false}
        className="c17"
        onClick={[Function]}
      >
        <span
          className="c18"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ProfilePage while deleting the account 1`] = `
.c0 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  background-color: #fff;
  padding: 16px 24px;
}

.c1 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c11 {
  text-shadow: 0px 0px 2px #000;
}

.c15 {
  margin-top: 24px;
  background-color: #fff;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c16 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c17 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: inset 0 1px 8px 0 rgba(0,0,0,0.3);
  background: #fff;
  border: 0;
  padding: 0 0 0 10px;
  font-size: 1em;
  font-family: "Open Sans",sans-serif;
  height: 3em;
  width: 100%;
}

.c7 {
  display: inline-block;
  font-size: 1em;
  margin: 16px 0 8px;
  font-weight: 700;
}

.c10 {
  margin: 1em 0;
}

.c8 {
  background-color: #f7f7f7;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  width: 100%;
}

.c5 {
  width: 48%;
  margin-bottom: 8px;
}

.c5 div:last-of-type {
  margin-bottom: 0;
}

.c3 {
  -webkit-flex-basis: 48%;
  -ms-flex-preferred-size: 48%;
  flex-basis: 48%;
}

.c3 p:first-child {
  margin-top: 16px;
}

.c14 {
  margin-bottom: 0.5em;
  font-size: 1.1em;
}

.c13 {
  margin: 1em 0;
}

@media screen and ( max-width:800px ) {
  .c1 {
    display: block;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

@media screen and ( max-width:800px ) {
  .c5 {
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          onSubmit={[Function]}
        >
          <div
            className="c5 c6"
            id="left"
          >
            <label
              className="c7"
              htmlFor="first-name"
            >
              <span>
                First name
              </span>
            </label>
            <input
              className="c8 c9"
              id="first-name"
              name="first name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c5 c6"
          >
            <label
              className="c7"
              htmlFor="last-name"
            >
              <span>
                Last name
              </span>
            </label>
            <input
              className="c8 c9"
              id="last-name"
              name="last name"
              onChange={[Function]}
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            className="c6"
          >
            <label
              className="c7"
              htmlFor="email-address"
            >
              <span>
                Email
              </span>
            </label>
            <input
              className="c8 c9"
              id="email-address"
              name="email"
              onChange={[Function]}
              type="text"
              value="email@email.email"
              width="100%"
            />
            <div>
              <button
                className="c10 c11 c12"
                type="submit"
              >
                <span>
                  Save profile
                </span>
              </button>
            </div>
          </div>
        </form>
        <section
          className="c13"
        >
          <p
            className="c14"
          >
            <span>
              Change password
            </span>
          </p>
          <p>
            <span>
              To change your password follow the instructions in the password reset email.
            </span>
          </p>
          <button
            className="c11 c12"
            onClick={[Function]}
            type="button"
          >
            <span>
              Send password reset email
            </span>
          </button>
        </section>
      </div>
      <div
        className="c3"
      >
        <p
          className="c14"
        >
          <span>
            Profile picture
          </span>
        </p>
        <p>
          <span>
            Your profile picture is supplied by Gravatar. If you don't have an account with them yet, or want to change your existing picture, please visit the 
            <a
              href="https://gravatar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gravatar website
            </a>
            . Changes may take up to an hour to become visible here.
          </span>
        </p>
        
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c15"
    >
      <button
        aria-expanded={false}
        className="c16"
        onClick={[Function]}
      >
        <span
          className="c17"
        >
          Danger zone
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
